# pubMed_paper_fetch

./: .gitignore  output.csv  pyproject.toml  results.csv
src/pubmed_fetcher/: cli.py  fetch.py
