[tool.poetry]
name = "pubmed-fetcher"
version = "0.1.0"
description = ""
authors = ["Rajendra <atlarajendra33@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"
pandas = "^2.2.3"
requests = "^2.32.3"
tqdm = "^4.67.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
[tool.poetry.scripts]
get-papers-list = "pubmed_fetcher.cli:main"
